# compeng-sem1-cpp

./: .gitignore  CMakeLists.txt  MakeFile  README.md  basics  basics.cpp  hello  hello.cpp
Assignments/: session-2  session-2.cpp  session-3-a  session-3-a.cpp  session-3-b  session-3-b.cpp  session-3-c  session-3-c.cpp  session-6-a  session-6-a.cpp  session-6-b  session-6-b.cpp
Euler/: 1  1.cpp  2  2.cpp  3-sieve-of-eratosthenes  3-sieve-of-eratosthenes.cpp
Exams/bcp-2022-02/: PBQ1  PBQ1.cpp
Labs/: 201709111956-tests-and-loops.cpp  201709180550  201709180550.cpp
Labs/base/: .gitignore  Makefile
Labs/base/src/: main.cpp
Labs/base/tests/: main_test.cpp
Labs/calculator/: Calculate.cpp  Calculate.h  functions.cpp  functions.h  main  main.cpp
Labs/calculator/tests/: main_tests.cpp
Labs/clion/: CMakeLists.txt
Labs/clion/src/: main.cpp
Labs/clion/tests/: main_test.cpp
